# raytracer

./: .gitignore  CMakeLists.txt  README.md
include/: image.h  light.h  material.h  primitive.h  ray.h  raytracer.h  texture.h  type_config.h  vec3.h
include/utils/: type_config.h  vec3.h
src/: image.cpp  light.cpp  main.cpp  primitive.cpp  raytracer.cpp  texture.cpp  window.cpp
